# fold_viewer

./: .gitignore  Cargo.toml
lib/src/: crand.fold  lib.rs
mesh-lib/: Cargo.toml
mesh-lib/src/: bird.fold  bird2.fold  crane2.fold  lib.rs  vec_math.rs
src/: main.rs  system.rs
