[package]
name = "mesh_explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.12.1"
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }
mesh-lib = { path = "./mesh-lib" }
serde_json = "1.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", branch = "main" }
